--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">ServiceCreate</string>
+    <string name="nav_home">设备</string>
+    <string name="nav_message">场景</string>
+    <string name="nav_person">我的</string>
+    <string name="nav_null">" "</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
