--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,17 +3,22 @@
     <string name="nav_message">场景</string>
     <string name="nav_setting">设置</string>
     <string name="nav_null">" "</string>
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="float_add_device">添加设备</string>
     <string name="nav_home">主页</string>
     <string name="home_username_default">Hello, Emmanuel</string>
     <string name="home_card_title">Energy consumption</string>
     <string name="home_card_date">16 Nov, 2022</string>
-    <string name="home_tab1">Rooms</string>
-    <string name="home_tab2">Devices</string>
+    <string name="home_tab1">房间</string>
+    <string name="home_tab2">设备</string>
+
+    <!--    auth    -->
     <string name="auth_welcome_back">欢迎您使用我们的软件</string>
-    <string name="auth_welcome_description">为了获得更好的用户体验,请先登录</string>
-    <string name="auth_tab1">Email</string>
-    <string name="auth_tab2">Phone Number</string>
+    <string name="auth_welcome_description">为了获得更好的用户体验, 请先登录</string>
+    <string name="auth_tab1">登录</string>
+    <string name="auth_tab2">注册</string>
+    <string name="auth_et_email_hint_text">邮箱</string>
+    <string name="auth_et_confidence_hint_text">密码</string>
+    <string name="auth_et_verified_hint_text">验证码</string>
 </resources>
