--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,20 @@
     <string name="auth_et_email_hint_text">邮箱</string>
     <string name="auth_et_confidence_hint_text">密码</string>
     <string name="auth_et_verified_hint_text">验证码</string>
+    <string name="auth_et_phone_hint_text">手机号码</string>
+    <string name="auth_bt_send">发送</string>
+
+    <string name="auth_verified_success_phone">验证码验证成功, 请输入您的手机号码</string>
+    <string name="auth_verified_enter_tip">请输入正确的验证码</string>
+
+    <string name="auth_verified_register_failure">注册失败, 请重试</string>
+    <string name="auth_verified_register_success">注册成功</string>
+
+    <string name="auth_verified_email_not_null">邮箱不能为空!!!</string>
+    <string name="auth_verified_sms_not_null">验证码不能为空!!!</string>
+    <string name="auth_verified_phonenumber_not_null">手机号不能为空!!!</string>
+    <string name="auth_verified_password_not_null">密码不能为空!!!</string>
+    <string name="auth_verified_login_success">登录成功</string>
+    <string name="auth_verified_login_failure">登陆失败,请重试</string>
+
 </resources>
