--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="home_card_date">16 Nov, 2022</string>
     <string name="home_tab1">房间</string>
     <string name="home_tab2">设备</string>
+    <string name="home_login_status_warning">登录状态异常</string>
 
     <!--    auth    -->
     <string name="auth_welcome_back">欢迎您使用我们的软件</string>
