--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="float_add_device">添加设备</string>
     <string name="nav_home">主页</string>
     <string name="home_username_default">Hello, Emmanuel</string>
-    <string name="home_card_title">Energy consumption</string>
+    <string name="home_card_title">暂无运行中的设备</string>
     <string name="home_card_date">16 Nov, 2022</string>
     <string name="home_tab1">房间</string>
     <string name="home_tab2">设备</string>
@@ -48,4 +48,8 @@
     <string name="air_wind_tab_auto">自动扫风</string>
     <string name="air_wind_tab_up_down">上下扫风</string>
 
+    <string name="append_search">点击搜索设备</string>
+    <string name="append_search_tip">点击设备图标或点击搜索按钮添加设备</string>
+    <string name="append_search_running">正在搜索中…</string>
+    <string name="append_search_cancel">取消</string>
 </resources>
