append fragment ui 1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,8 @@
     <string name="auth_verified_password_not_null">密码不能为空!!!</string>
     <string name="auth_verified_login_success">登录成功</string>
     <string name="auth_verified_login_failure">登陆失败,请重试</string>
+    <string name="auth_state_abnormal">登录状态异常</string>
+    <string name="auth_state_abnormal_tip">请重新登陆</string>
 
     <!--    airCondition -->
     <string name="air_mode_tab1">制热</string>
@@ -52,4 +54,6 @@
     <string name="append_search_tip">点击设备图标或点击搜索按钮添加设备</string>
     <string name="append_search_running">正在搜索中…</string>
     <string name="append_search_cancel">取消</string>
+    <string name="append_room">添加房间</string>
+    <string name="append_room_tip">请输入房间名</string>
 </resources>
