--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,7 +64,7 @@
 
     <!--    AppendFragment -->
     <string name="append_search">点击搜索设备</string>
-    <string name="append_search_tip">点击设备图标或点击搜索按钮添加设备</string>
+    <string name="append_search_tip">点击房间图标添加房间\n或点击搜索按钮添加设备</string>
     <string name="append_search_running">正在搜索中…</string>
     <string name="append_search_cancel">取消</string>
     <string name="append_room">添加房间</string>
