--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -111,6 +111,8 @@
     <string name="controllerGateway_error">网关设备不支持编辑</string>
     <string name="confirm">确定</string>
     <string name="cancel">取消</string>
+    <string name="wisdom_custom_delete_title">删除定时任务</string>
+    <string name="wisdom_custom_content">确定删除定时任务</string>
 
 
 </resources>
